20010815
 - (bal) Fixed stray code in readconf.c that went in by mistake.

20010814
 - (stevesk) sshpty.c, cray.[ch]: whitespace, formatting and cleanup
   for some #ifdef _CRAY code; ok wendyp@cray.com
 - (stevesk) sshpty.c: return 0 on error in cray pty code;
   ok wendyp@cray.com
 - (stevesk) bsd-cray.c: utmp strings are not C strings
 - (stevesk) bsd-cray.c: more cleanup; ok wendyp@cray.com

20010812
 - (djm) Fix detection of long long int support. Based on patch from 
   Michael Stone <mstone@cs.loyola.edu>. ok stevesk, tim

20010808
 - (bal) Minor correction to inet_ntop.h.  _BSD_RRESVPORT_H should be
   _BSD_INET_NTOP_H.  Pointed out by Mark Miller <markm@swoon.net> 

20010807
 - (tim) [configure.in sshconnect.c openbsd-compat/Makefile.in
	 openbsd-compat/openbsd-compat.h ] Add inet_ntop.c inet_ntop.h back
	 in. Needed for sshconnect.c
	 [sshconnect.c] fix INET6_ADDRSTRLEN for non IPv6 machines
	 [configure.in] make tests with missing libraries fail
	 patch by Wendy Palm <wendyp@cray.com>
	 Added openbsd-compat/bsd-cray.h. Selective patches from
	 William L. Jones <jones@mail.utexas.edu> 

20010806
 - OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/07/22 21:32:27
     [sshpty.c]
     update comment
   - pvalchev@cvs.openbsd.org 2001/07/22 21:32:42
     [ssh.1]
     There is no option "Compress", point to "Compression" instead; ok 
     markus
   - markus@cvs.openbsd.org 2001/07/22 22:04:19
     [readconf.c ssh.1]
     enable challenge-response auth by default; ok millert@
   - markus@cvs.openbsd.org 2001/07/22 22:24:16
     [sshd.8]
     Xr login.conf
   - markus@cvs.openbsd.org 2001/07/23 09:06:28
     [sshconnect2.c]
     reorder default sequence of userauth methods to match ssh behaviour:
     hostbased,publickey,keyboard-interactive,password
   - markus@cvs.openbsd.org 2001/07/23 12:47:05
     [ssh.1]
     sync PreferredAuthentications
   - aaron@cvs.openbsd.org 2001/07/23 14:14:18
     [ssh-keygen.1]
     Fix typo.